--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,14 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# vendor dir
+/vendor
 
-# Folder config file
-Desktop.ini
+# zend studio
+/.settings
+/.project
+/.buildpath
+/.externalToolBuilders
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# composer stuff
+composer.lock
 
 # rsync stuff
 .rsync
