--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "phossa/phossa",
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "phossa/phossa-shared": "*"
     }
 }
