--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@
 # Sample ENV files
 # ############################################################################
 
-# system directory
 #
+# environment
+# 
 PHOSSA_SYSDIR=${PHOSSA_ROOTDIR}/${SYSDIR|=system}
 
 #
