--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     "keywords": [ "phossa", "framework", "php" ],
     "require": {
         "php": ">=5.4.0",
-        "phossa/phossa-config": "dev-master",
-        "phossa/phossa-di": "dev-master"
+        "phossa/phossa-di": "^1.0.7"
     },
     "autoload": {
         "psr-4": {
